--- a/index.html
+++ b/index.html
@@ -1,8 +1,14 @@
+
+
 <!DOCTYPE HTML>
+
 <html>
+
+
+
 <head>
 
-   <title> Nidhi Raviprasad </title>
+   <title> Nidhi - GWC Website </title>
 
    <link rel="stylesheet" href="tutorial.css">
 
@@ -11,6 +17,8 @@
    <link rel="stylesheet" href="jQuery.js">
 
 </head>
+
+
 
 <body>
 
@@ -137,7 +145,6 @@
 </script>
 
 </body>
-
 
 
 
