--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
    <title> Nidhi - GWC Website </title>
 
-   <link rel="stylesheet" href="tutorial.css">
+   <link rel="stylesheet" type="text/css" href="tutorial.css" media="screen" />
 
    <script src="http://ajax.aspnetcdn.com/ajax/jQuery/jquery-1.12.2.min.js"></script>
 
