--- a/index.html
+++ b/index.html
@@ -1,4 +1,10 @@
-<div class="tabs">
+@import "tutorial.css";
+<head>
+  
+</head>
+
+<body>
+  <div class="tabs">
   <input type="radio" name="tabs" id="toggle-apples" checked="checked" />
   <label for="toggle-apples">
                 
@@ -49,3 +55,4 @@
     </p>
   </div>
 </div>
+</body>
