--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
-@import "tutorial.css";
 <head>
-  
+ <link rel="stylesheet" type="text/css" href="tutorial.css" media="screen" /> 
 </head>
 
 <body>
