more content added to 2nd tab!

--- a/index.html
+++ b/index.html
@@ -14,26 +14,41 @@
  
   <div class="tabs">
   <input type="radio" name="tabs" id="tabone" checked="checked">
-  <label for="tabone">Who I Am</label>
+  <label for="tabone">Home</label>
   <div class="tab">
-    <h1>First Tab Content</h1>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+    <h3>Sunday, November 10, 2019</h3>
+    <p>I've been writing in a journal for the past week. The first few days seemed to be the easiest for me, but I started to forget to write around halfway through the week. It's a very enjoyable hobby though, so I will probably try to make it a habit. </p>
+    <h3>Sunday, November 3, 2019</h3>
+    <p>I decided to start writing in a journal to plan out my days. I saw a Youtube video about bullet journalling which has inspired me to try it myself. I'll update with my experience as I use it. </p>
+    
   </div>
   
   <input type="radio" name="tabs" id="tabtwo">
   <label for="tabtwo">Computer Science</label>
   <div class="tab">
-    <h1>Second Tab Content</h1>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+    <h3>Languages & Technology I have worked with!</h3>
+    <p> ➼ Java (algorithmic programming, mini-games using the <a href = "https://github.com/apcsio/apcs" target = "_self">APCS library</a>)</p>
+    <p> ➼ Python (algorithmic programming, graphics using the turtle library, GPIO with Raspberry Pi)</p>
+    <p> ➼ HTML, CSS (my <a href = "http://rnidhi123.github.io/Final-Project---GWC/index3.html" target = "_self">old website</a> and this one!)</p>
+    <p> ➼ JavaScript (ReactJS games using <a href = "https://github.com/facebook/create-react-app" target = "_self">create-react-app</a>)</p>
+
+    <h3> Projects (all are available on my Github)</h3>
   </div>
   
   <input type="radio" name="tabs" id="tabthree">
-  <label for="tabthree">Badminton</label>
+  <label for="tabthree">Interests</label>
   <div class="tab">
-    <h1>Third Tab Content</h1>
+    <h2>All about my hobbies and interests!</h2>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
   </div>
+  
+  <input type="radio" name="tabs" id="tabfour">
+  <label for="tabfour">About</label>
+  <div class="tab">
+    <h2>Third Tab Content</h2>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+  </div>
+   
 </div>
  
 </body>
