link settings changed!

--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
   <label for="tabtwo">Computer Science</label>
   <div class="tab">
     <h3>Languages & Technology I have worked with!</h3>
-    <p> ➼ Java (algorithmic programming, mini-games using the <a href = "https://github.com/apcsio/apcs" target = "_self">APCS library</a>)</p>
+    <p> ➼ Java (algorithmic programming, mini-games using the <a href = "https://github.com/apcsio/apcs" target = "_blank">APCS library</a>)</p>
     <p> ➼ Python (algorithmic programming, graphics using the turtle library, GPIO with Raspberry Pi)</p>
-    <p> ➼ HTML, CSS (my <a href = "http://rnidhi123.github.io/Final-Project---GWC/index3.html" target = "_self">old website</a> and this one!)</p>
-    <p> ➼ JavaScript (ReactJS games using <a href = "https://github.com/facebook/create-react-app" target = "_self">create-react-app</a>)</p>
+    <p> ➼ HTML, CSS (my <a href = "http://rnidhi123.github.io/Final-Project---GWC/index3.html" target = "_blank">old website</a> and this one!)</p>
+    <p> ➼ JavaScript (ReactJS games using <a href = "https://github.com/facebook/create-react-app" target = "_blank">create-react-app</a>)</p>
 
     <h3> Projects (all are available on my Github)</h3>
   </div>
