--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
   <meta charset="UTF-8">
   <title>Nidhi Raviprasad</title>
   <h1> Nidhi Raviprasad</h1>
+ <a href = "" target = "_blank"> <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px"
+width="50" height="50"
+viewBox="0 0 172 172"
+style=" fill:#000000;"><g xmlns="http://www.w3.org/2000/svg" font-family="none" font-size="none" font-weight="none" style="mix-blend-mode: normal" fill="none" fill-rule="nonzero" stroke="none" stroke-dasharray="" stroke-dashoffset="0" stroke-linecap="butt" stroke-linejoin="miter" stroke-miterlimit="10" stroke-width="1" text-anchor="none"><path fill="none" d="M 0 172 v -172 h 172 v 172 Z" /><g fill="#ac3b61"><path d="M 78.1167 15.05 c -32.9667 3.58333 -59.4833 30.1 -63.0667 62.35 c -3.58333 33.6833 15.7667 63.7833 45.15 75.25 c 2.15 0.71667 4.3 -0.71667 4.3 -3.58333 v -11.4667 c 0 0 -2.86667 0.71667 -6.45 0.71667 c -10.0333 0 -14.3333 -8.6 -15.05 -13.6167 c -0.71667 -2.86667 -2.15 -5.01667 -4.3 -7.16667 c -2.15 -0.71667 -2.86667 -0.71667 -2.86667 -1.43333 c 0 -1.43333 2.15 -1.43333 2.86667 -1.43333 c 4.3 0 7.88333 5.01667 9.31667 7.16667 c 3.58333 5.73333 7.88333 7.16667 10.0333 7.16667 c 2.86667 0 5.01667 -0.71667 6.45 -1.43333 c 0.71667 -5.01667 2.86667 -10.0333 7.16667 -12.9 c -16.4833 -3.58333 -28.6667 -12.9 -28.6667 -28.6667 c 0 -7.88333 3.58333 -15.7667 8.6 -21.5 c -0.71667 -1.43333 -1.43333 -5.01667 -1.43333 -10.0333 c 0 -2.86667 0 -6.45 1.43333 -9.31667 c 0 -1.43333 1.43333 -2.15 2.15 -2.15 h 0.71667 c 3.58333 0.71667 10.75 2.86667 17.2 9.31667 c 4.3 -1.43333 9.31667 -2.15 14.3333 -2.15 c 5.01667 0 10.0333 0.71667 14.3333 2.15 c 6.45 -6.45 14.3333 -8.6 17.9167 -9.31667 h 0.71667 c 1.43333 0 2.15 0.71667 2.86667 2.15 c 0 2.86667 0 6.45 0 9.31667 c 0 5.73333 -0.71667 8.6 -1.43333 10.0333 c 5.01667 5.73333 8.6 12.9 8.6 21.5 c 0 15.7667 -12.1833 25.0833 -28.6667 28.6667 c 4.3 3.58333 7.16667 10.0333 7.16667 16.4833 v 18.6333 c 0 2.15 2.15 4.3 5.01667 3.58333 c 26.5167 -10.75 45.15 -36.55 45.15 -66.65 c 0 -43 -36.55 -76.6833 -79.55 -71.6667 Z" /></g></g></svg> </a>
   <link rel="stylesheet" href="tutorial.css">
  
   
