--- a/index.html
+++ b/index.html
@@ -45,38 +45,38 @@ style=" fill:#000000;"><g xmlns="http://www.w3.org/2000/svg" font-family="none" 
   <label for="tabone">Home</label>
   <div class="tab">
    
-    <h3>Sunday, November 10, 2019 —————————</h3>
+    <h3>Sunday, November 10, 2019 ━━━━━━━━━━━━</h3>
     <p>I've been writing in a journal for the past week. The first few days seemed to be the easiest for me, but I started to forget to write around halfway through the week. It's a very enjoyable hobby though, so I will try to make it a habit. </p>
     
-    <h3>Sunday, November 3, 2019> —————————</h3>
+    <h3>Sunday, November 3, 2019 ━━━━━━━━━━━━</h3>
     <p>I decided to start writing in a journal to plan out my days. I saw a Youtube video about bullet journaling which has inspired me to try it myself. I'll update with my experience as I use it. </p>
     
    
-    <h4>————————— The end! Check out the Computer Science tab to learn about my CS journey, the Interests page to learn about my hobbies and the About page to learn about me!</h4>
+    <h4>━━━━━━━━━━ The end! Check out the Computer Science tab to learn about my CS journey, the Interests page to learn about my hobbies and the About page to learn about me!</h4>
   </div>
   
   <input type="radio" name="tabs" id="tabtwo">
   <label for="tabtwo">Computer Science</label>
   <div class="tab">
    
-    <h3>Languages & Technology I have worked with! —————————</h3>
+    <h3>Languages & Technology I have worked with! ━━━━━━━━━━━━</h3>
     <p>  > Java (algorithmic programming, mini-games using the <a href = "https://github.com/apcsio/apcs" target = "_blank">APCS library</a>)</p>
     <p>  > Python (algorithmic programming, graphics using the turtle library, GPIO with Raspberry Pi)</p>
     <p>  > HTML, CSS (web design)</p>
     <p>  > JavaScript (ReactJS games using <a href = "https://github.com/facebook/create-react-app" target = "_blank">create-react-app</a>)</p>
 
-    <h3>My Projects (all available on GitHub) —————————</h3>
+    <h3>My Projects (all available on GitHub) ━━━━━━━━━━━━</h3>
     <p>  > Sorting Hat Quiz - a five-question quiz which uses the results to sort the user into a Hogwarts House! (Javascript - ReactJs, create-react-app)</p>
     <p>  > My <a href = "http://rnidhi123.github.io/Final-Project---GWC/index3.html" target = "_blank">old website</a>! (HTML, CSS)</p>
     <p>  > This website! (HTML, CSS)</p>
     <p>  > Blackjack Project - a Blackjack game in which the user plays against the computer! (Python)</p>
     <p>  > A collection of mini-games! (Java - APCS library)</p>
    
-    <h3>USACO [USA Computing Olympiad] —————————</h3>
+    <h3>USACO [USA Computing Olympiad] ━━━━━━━━━━━━</h3>
     <p>  > I am currently a Silver level contestant</p>
     <p>  > My programs are written in Java</p>
    
-    <h3>My Journey —————————</h3>
+    <h3>My Journey ━━━━━━━━━━━━</h3>
     <p> I first started programming when I joined my school's Girls Who Code club in sixth grade. I wrote my first "Hello, World" program in HTML in this club, and ended up creating my first website. 
      The more I learned about programming, the more interested I became. I started learning JavaScript on free online websites, and started learning Java and Python as well. 
      The Raspberry Pi sparked my interest; the idea of a credit card-sized computer fascinated me. Using the GPIO on the Pi taught me about circuitry and hardware and how enjoyable working with hardware can be (as I once thought hardware was boring and difficult to learn). 
@@ -84,7 +84,7 @@ style=" fill:#000000;"><g xmlns="http://www.w3.org/2000/svg" font-family="none" 
      Although I find algorithmic programming very interesting, I never understood its applications and importance. This led me to start creating projects. I want to learn about how all the parts of a project come together to form one product. To understand this process, I want to create my own projects in this fashion.
      My journey with programming is far from over and I am very excited to share the rest of my journey! </p>
    
-    <h4>————————— The end! Check out the Interests tab to learn about my other hobbies, the Home page for general updates and the About page to learn about me!</h4>
+    <h4>━━━━━━━━━━ The end! Check out the Interests tab to learn about my other hobbies, the Home page for general updates and the About page to learn about me!</h4>
   </div>
   
   <input type="radio" name="tabs" id="tabthree">
@@ -92,7 +92,7 @@ style=" fill:#000000;"><g xmlns="http://www.w3.org/2000/svg" font-family="none" 
   <div class="tab">
     <h2>All about my hobbies and interests!</h2>
    
-    <h3>Dance</h3>
+    <h3>Dance ━━━━━━━━━━━━</h3>
     <p> I have been learning Bharatanatyam [a form of Indian classical dance] since I was seven years old. </p>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
   </div>
