tab 4 content updated!!!

--- a/index.html
+++ b/index.html
@@ -45,38 +45,38 @@ style=" fill:#000000;"><g xmlns="http://www.w3.org/2000/svg" font-family="none" 
   <label for="tabone">Home</label>
   <div class="tab">
    
-    <h3>━━ Sunday, November 10, 2019 ━━━━━━━━━━━━</h3>
+    <h3>Sunday, November 10, 2019 ━━━━━━━━━━━━</h3>
     <p>I've been writing in a journal for the past week. The first few days seemed to be the easiest for me, but I started to forget to write around halfway through the week. It's a very enjoyable hobby though, so I will try to make it a habit. </p>
     
-    <h3>━━ Sunday, November 3, 2019 ━━━━━━━━━━━━</h3>
+    <h3>Sunday, November 3, 2019 ━━━━━━━━━━━━</h3>
     <p>I decided to start writing in a journal to plan out my days. I saw a Youtube video about bullet journaling which has inspired me to try it myself. I'll update with my experience as I use it. </p>
     
    
-    <h4>━━━━━━ The end! Check out the Computer Science tab to learn about my CS journey, the Interests page to learn about my hobbies and the About page to learn about me!</h4>
+    <h4>━━━━━━ The end! Check out the Computer Science tab to learn about my CS journey, the Interests page to learn about my hobbies and the About page to contact me!</h4>
   </div>
   
   <input type="radio" name="tabs" id="tabtwo">
   <label for="tabtwo">Computer Science</label>
   <div class="tab">
    
-    <h3>━━ Languages & Technology I have worked with! ━━━━━━━━━━━━</h3>
+    <h3>Languages & Technology I have worked with! ━━━━━━━━━━━━</h3>
     <p>  > Java [algorithmic programming, mini-games using the <a href = "https://github.com/apcsio/apcs" target = "_blank">APCS library</a>]</p>
     <p>  > Python [algorithmic programming, graphics using the turtle library, GPIO with Raspberry Pi]</p>
     <p>  > HTML, CSS [web design]</p>
     <p>  > JavaScript [ReactJS games using <a href = "https://github.com/facebook/create-react-app" target = "_blank">create-react-app</a>]</p>
 
-    <h3>━━ My Projects [all available on GitHub] ━━━━━━━━━━━━</h3>
+    <h3>My Projects [all available on GitHub] ━━━━━━━━━━━━</h3>
     <p>  > Sorting Hat Quiz - a five-question quiz which uses the results to sort the user into a Hogwarts House! [Javascript - ReactJs, create-react-app]</p>
     <p>  > My <a href = "http://rnidhi123.github.io/Final-Project---GWC/index3.html" target = "_blank">old website</a>! [HTML, CSS]</p>
     <p>  > This website! [HTML, CSS]</p>
     <p>  > Blackjack Project - a Blackjack game in which the user plays against the computer! [Python]</p>
     <p>  > A collection of mini-games! [Java - APCS library]</p>
    
-    <h3>━━ USACO [USA Computing Olympiad] ━━━━━━━━━━━━</h3>
+    <h3>USACO [USA Computing Olympiad] ━━━━━━━━━━━━</h3>
     <p>  > I am currently a Silver level contestant</p>
     <p>  > My programs are written in Java</p>
    
-    <h3>━━ My Journey ━━━━━━━━━━━━</h3>
+    <h3>My Journey ━━━━━━━━━━━━</h3>
     <p> I first started programming when I joined my school's Girls Who Code club in sixth grade. I wrote my first "Hello, World" program in HTML in this club, and ended up creating my first website. 
      The more I learned about programming, the more interested I became. I started learning JavaScript on free online websites, and started learning Java and Python as well. 
      The Raspberry Pi sparked my interest; the idea of a credit card-sized computer fascinated me. Using the GPIO on the Pi taught me about circuitry and hardware and how enjoyable working with hardware can be (as I once thought hardware was boring and difficult to learn). 
@@ -84,7 +84,7 @@ style=" fill:#000000;"><g xmlns="http://www.w3.org/2000/svg" font-family="none" 
      Although I find algorithmic programming very interesting, I never understood its applications and importance. This led me to start creating projects. I want to learn about how all the parts of a project come together to form one product. To understand this process, I want to create my own projects in this fashion.
      My journey with programming is far from over and I am very excited to share the rest of my journey! </p>
    
-    <h4>━━━━━━ The end! Check out the Interests tab to learn about my other hobbies, the Home page for general updates and the About page to learn about me!</h4>
+    <h4>━━━━━━ The end! Check out the Interests tab to learn about my other hobbies, the Home page for general updates and the About page to contact me!</h4>
   </div>
   
   <input type="radio" name="tabs" id="tabthree">
@@ -92,7 +92,7 @@ style=" fill:#000000;"><g xmlns="http://www.w3.org/2000/svg" font-family="none" 
   <div class="tab">
     <h2>All about my hobbies and interests!</h2>
    
-    <h3>━━ Dance ━━━━━━━━━━━━</h3>
+    <h3>Dance ━━━━━━━━━━━━</h3>
     <p> I have been learning Bharatanatyam [a form of Indian classical dance] since I was seven years old. 
      I learn at <a href = "https://www.facebook.com/bayareanrityagurukul/" target = "_blank">Bayarea Nritya Gurukul</a> from Guru Megha Shetty. 
      My group and I have competed and won in several dance competitions. 
@@ -101,27 +101,33 @@ style=" fill:#000000;"><g xmlns="http://www.w3.org/2000/svg" font-family="none" 
     <p> Aside from Bharatnatyam, I also like to do hip-hop and hip-hop bollywood fusion dances. I have choreographed and participated in dances for my high school's homecoming, in addition to choreographing dances for family gatherings. 
      I love to choreograph due to the endless creativity I can use as a choreographer. </p>
    
-   <h3>━━ Badminton ━━━━━━━━━━━━</h3>
+   <h3>Badminton ━━━━━━━━━━━━</h3>
    <p> I started learning badminton in fifth grade. I was drawn to the lightness and precision of the sport and enjoyed observing the various strategies players would use to defeat their opponents.
     I tried out for the school team and became a competing player in my freshman year. I was awarded with the Most Improved Player Award and the Scholar Athlete Award at the end of the season. </p>
    
-   <h3>━━ Jewelry Making ━━━━━━━━━━━━</h3>
+   <h3>Jewelry Making ━━━━━━━━━━━━</h3>
    <p> Making jewelry has been one of my favorite hobbies since the fourth grade. I started by making simple bracelets with elastic and adding pendants onto chain.
     As I have grown and gained more experience, I have been creating necklaces and bracelets with more complicated beading patterns. 
     One of my favorite things to do is work with wire. I have been using wire to create hoop earrings and charms, as well as rings and bracelets. </p>
    
-   <h3>━━ Baking ━━━━━━━━━━━━</h3>
+   <h3>Baking ━━━━━━━━━━━━</h3>
    <p> I have had a long journey with baking, going from boxed cake mix to creating my own tres leches cake. It started as an excuse to be able to eat more desserts, but it is now a fun hobby I can do by myself, with friends, or with family.
     My favorite desserts that I have baked are a tres leches cake and a spiced apple cake! </p>
    
-   <h4>━━━━━━ The end! Check out the Home page for general updates, the Computer Science tab to learn about my CS Journey and the About page to learn about me!</h4>
+   <h4>━━━━━━ The end! Check out the Home page for general updates, the Computer Science tab to learn about my CS Journey and the About page to contact me!</h4>
   </div>
   
   <input type="radio" name="tabs" id="tabfour">
   <label for="tabfour">About</label>
   <div class="tab">
-    <h2>Third Tab Content</h2>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+    <h3>General Information About Me</h3>
+    <p> > Who am I: Nidhi Raviprasad</p>
+    <p> > My <a href = "mailto:nidhi.raviprasad@gmail.com" target = "_blank">Email Address</a>!</p>
+    <p> > My <a href = "https://github.com/nidhiraviprasad" target = "_blank">GitHub Profile</a>!</p>
+    <p> > <a href = "https://sites.google.com/view/projectreact/home" target = "_blank">Updates on my project</a>!</p>
+    <p> <strong> Fun Fact: I have a poster of the entire JavaScript language in my room, and it is taller than me!</strong></p>
+   
+   <h4>━━━━━━ The end! Check out the Home page for general updates, the Computer Science tab to learn about my CS Journey and the Interests page to learn about my hobbies!</h4>
   </div>
    
  </div>
