changed text formatting

--- a/index.html
+++ b/index.html
@@ -96,8 +96,8 @@ style=" fill:#000000;"><g xmlns="http://www.w3.org/2000/svg" font-family="none" 
     <p> I have been learning Bharatanatyam [a form of Indian classical dance] since I was seven years old. 
      I learn at <a href = "https://www.facebook.com/bayareanrityagurukul/" target = "_blank">Bayarea Nritya Gurukul</a> from Guru Megha Shetty. 
      My group and I have competed and won in several dance competitions. 
-     Currently, I have completed five out of seven exams to get a Bachelor of Arts in Bharatnatyam from a center in India (expected completion: December 2021). 
-     I am training for my Arangetram (August 2020), a three-hour live solo performance. </p>
+     Currently, I have completed five out of seven exams to get a Bachelor of Arts in Bharatnatyam from a center in India [expected completion: December 2021]. 
+     I am training for my Arangetram [August 2020], a three-hour live solo performance. </p>
     <p> Aside from Bharatnatyam, I also like to do hip-hop and hip-hop bollywood fusion dances. I have choreographed and participated in dances for my high school's homecoming, in addition to choreographing dances for family gatherings. 
      I love to choreograph due to the endless creativity I can use as a choreographer. </p>
    
