--- a/index.html
+++ b/index.html
@@ -120,14 +120,14 @@ style=" fill:#000000;"><g xmlns="http://www.w3.org/2000/svg" font-family="none" 
   <input type="radio" name="tabs" id="tabfour">
   <label for="tabfour">About</label>
   <div class="tab">
-    <h3>General Information About Me</h3>
-    <p> > Who am I: Nidhi Raviprasad</p>
+    <h3>General Information About Me ━━━━━━━━━━━━</h3>
+    <p> > Who I am: Nidhi Raviprasad</p>
     <p> > My <a href = "mailto:nidhi.raviprasad@gmail.com" target = "_blank">Email Address</a>!</p>
     <p> > My <a href = "https://github.com/nidhiraviprasad" target = "_blank">GitHub Profile</a>!</p>
     <p> > <a href = "https://sites.google.com/view/projectreact/home" target = "_blank">Updates on my project</a>!</p>
     <p> <strong> Fun Fact: I have a poster of the entire JavaScript language in my room, and it is taller than me!</strong></p>
    
-   <h4>━━━━━━ The end! Check out the Home page for general updates, the Computer Science tab to learn about my CS Journey and the Interests page to learn about my hobbies!</h4>
+   <h4>━━━━ The end! Check out the Home page for general updates, the Computer Science tab to learn about my CS Journey and the Interests page to learn about my hobbies!</h4>
   </div>
    
  </div>
