changed some tab 2 content

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@ style=" fill:#000000;"><g xmlns="http://www.w3.org/2000/svg" font-family="none" 
      Although I find algorithmic programming very interesting, I never understood its applications and importance. This led me to start creating projects. I want to learn about how all the parts of a project come together to form one product. To understand this process, I want to create my own projects in this fashion.
      My journey with programming is far from over and I am very excited to share the rest of my journey! </p>
    
-    <h4>━━━━━━ The end! Check out the Interests tab to learn about my other hobbies, the Home page for general updates and the About page to contact me!</h4>
+    <h4>━━━━━━ The end! Check out the Home page for general updates, Interests tab to learn about my other hobbies and the About page to contact me!</h4>
   </div>
   
   <input type="radio" name="tabs" id="tabthree">
