--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ style=" fill:#000000;"><g xmlns="http://www.w3.org/2000/svg" font-family="none" 
     <h3>Sunday, November 3, 2019 ━━━━━━━━━━━━</h3>
     <p>I decided to start writing in a journal to plan out my days. I saw a Youtube video about bullet journaling which has inspired me to try it myself. I'll update with my experience as I use it. </p>
     
-   
+    
     <h4>━━━━━━ The end! Check out the Computer Science tab to learn about my CS journey, the Interests page to learn about my hobbies and the About page to contact me!</h4>
   </div>
   
@@ -99,7 +99,7 @@ style=" fill:#000000;"><g xmlns="http://www.w3.org/2000/svg" font-family="none" 
      Currently, I have completed five out of seven exams to get a Bachelor of Arts in Bharatnatyam from a center in India [expected completion: December 2021]. 
      I am training for my Arangetram [August 2020], a three-hour live solo performance. </p>
     <p> Aside from Bharatnatyam, I also like to do hip-hop and hip-hop bollywood fusion dances. I have choreographed and participated in dances for my high school's homecoming, in addition to choreographing dances for family gatherings. 
-     I love to choreograph due to the endless creativity I can use as a choreographer. </p>
+     I love to choreograph since there are no limits to creativity. </p>
    
    <h3>Badminton ━━━━━━━━━━━━</h3>
    <p> I started learning badminton in fifth grade. I was drawn to the lightness and precision of the sport and enjoyed observing the various strategies players would use to defeat their opponents.
