--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
  
   <meta charset="UTF-8">
-  <title>Nidhi Raviprasad</title>
+  <title> <img src="https://img.icons8.com/ios/50/000000/hiragana-n.png"> Nidhi Raviprasad</title>
  
  <div id = "container">
   
@@ -52,7 +52,7 @@ style=" fill:#000000;"><g xmlns="http://www.w3.org/2000/svg" font-family="none" 
     <p>I decided to start writing in a journal to plan out my days. I saw a Youtube video about bullet journaling which has inspired me to try it myself. I'll update with my experience as I use it. </p>
     
     
-    <h4>━━━━━━ The end! Check out the Computer Science tab to learn about my CS journey, the Interests page to learn about my hobbies and the About page to contact me!</h4>
+    <h4>━━━━━━ The end! Check out the other tabs for more info!</h4>
   </div>
   
   <input type="radio" name="tabs" id="tabtwo">
@@ -84,7 +84,7 @@ style=" fill:#000000;"><g xmlns="http://www.w3.org/2000/svg" font-family="none" 
      Although I find algorithmic programming very interesting, I never understood its applications and importance. This led me to start creating projects. I want to learn about how all the parts of a project come together to form one product. To understand this process, I want to create my own projects in this fashion.
      My journey with programming is far from over and I am very excited to share the rest of my journey! </p>
    
-    <h4>━━━━━━ The end! Check out the Home page for general updates, Interests tab to learn about my other hobbies and the About page to contact me!</h4>
+    <h4>━━━━━━ The end! Check out the other tabs for more info!</h4>
   </div>
   
   <input type="radio" name="tabs" id="tabthree">
@@ -114,7 +114,7 @@ style=" fill:#000000;"><g xmlns="http://www.w3.org/2000/svg" font-family="none" 
    <p> I have had a long journey with baking, going from boxed cake mix to creating my own tres leches cake. It started as an excuse to be able to eat more desserts, but it is now a fun hobby I can do by myself, with friends, or with family.
     My favorite desserts that I have baked are a tres leches cake and a spiced apple cake! </p>
    
-   <h4>━━━━━━ The end! Check out the Home page for general updates, the Computer Science tab to learn about my CS Journey and the About page to contact me!</h4>
+   <h4>━━━━━━ The end! Check out the other tabs for more info!</h4>
   </div>
   
   <input type="radio" name="tabs" id="tabfour">
@@ -127,7 +127,7 @@ style=" fill:#000000;"><g xmlns="http://www.w3.org/2000/svg" font-family="none" 
     <p> > <a href = "https://sites.google.com/view/projectreact/home" target = "_blank">Updates on my project</a>!</p>
     <p> <strong> Fun Fact: I have a poster of the entire JavaScript language in my room, and it is taller than me!</strong></p>
    
-   <h4>━━━━ The end! Check out the Home page for general updates, the Computer Science tab to learn about my CS Journey and the Interests page to learn about my hobbies!</h4>
+   <h4>━━━━ The end! Check out the other tabs for more info!</h4>
   </div>
    
  </div>
