weekly update 12/25 edit

--- a/index.html
+++ b/index.html
@@ -46,19 +46,19 @@ style=" fill:#000000;"><g xmlns="http://www.w3.org/2000/svg" font-family="none" 
   <div class="tab">
    
    <h3>Wednesday, December 25, 2019 ━━━━━━━━━━━━</h3>
-    <p>With finals coming up (and my dance school's annual performance) I haven't had much time to much other than prepare for the first USACO contest of the season! </p>
+    <p>I was out of town this Sunday so I couldn't update as per schedule. I have started an AI project in Python this week! It uses tensorflow/tflearn and nltk to chat with the user. I want it to talk users through their stress/anxiety/other minor mental health issues and give them suggestions which may temporarily help their health (it is not meant to diagnose or treat any issues, just temporarily alleviate them). Hopefully I can get it working though, since I am experiencing issues with Python on my computer. </p>
    
    <h3>Sunday, December 15, 2019 ━━━━━━━━━━━━</h3>
-    <p>I took USACO this weekend! I did not do as well as I would have liked, but I have figured out my mistakes and hopefully I do better next time! </p>
+    <p>I took USACO this weekend! I did not do as well as I would have liked, but I have figured out my mistakes and hopefully I will do better next time! </p>
    
    <h3>Sunday, December 8, 2019 ━━━━━━━━━━━━</h3>
-    <p>For our school's annual dance performance this year, I am in 2 dances! One of them is a classical dance about Shiva, and the other is a Bollywood + Hip-Hop fusion. I am extremely excited for this year! </p>
+    <p>For our school's annual dance performance this year, I am in 2 dances! One of them is a classical dance about Shiva (an Indian god), and the other is a Bollywood + Hip-Hop fusion. I am extremely excited for this year! </p>
    
    <h3>Sunday, December 1, 2019 ━━━━━━━━━━━━</h3>
     <p>With finals coming up (and my dance school's annual performance) I haven't had much time to much other than prepare for the first USACO contest of the season! </p>
     
    <h3>Sunday, November 24, 2019 ━━━━━━━━━━━━</h3>
-    <p>I've been writing in a journal for the past week. The first few days seemed to be the easiest for me, but I started to forget to write around halfway through the week. It's a very enjoyable hobby though, so I will try to make it a habit. </p>
+    <p>I changed the layout of the website! I wasn't completely happy with how it was before, and I like this one more (but there is definitely room for improvement). </p>
     
    <h3>Sunday, November 17, 2019 ━━━━━━━━━━━━</h3>
     <p>I was able to make some jewelry this past weekend! I made a necklace for one of my relatives, then tried to see if I could make fancy rings (which was good for an experiment, but did not turn out that well). I also figured out how to cage beads properly, so I can turn beads into charms for projects now! </p>
