--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@ style=" fill:#000000;"><g xmlns="http://www.w3.org/2000/svg" font-family="none" 
     <p>I decided to start writing in a journal to plan out my days. I saw a Youtube video about bullet journaling which has inspired me to try it myself. I'll update with my experience as I use it. </p>
     
     
-    <h4>━━━━━━ The end! Check out the other tabs for more info!</h4>
+    <h4>━━━━━━━━━━━━ The end! Check out the other tabs for more info!</h4>
   </div>
   
   <input type="radio" name="tabs" id="tabtwo">
@@ -78,31 +78,31 @@ style=" fill:#000000;"><g xmlns="http://www.w3.org/2000/svg" font-family="none" 
   <div class="tab">
    
     <h3>Languages & Technology I have worked with! ━━━━━━━━━━━━</h3>
-    <p>  > Java [algorithmic programming, mini-games using the <a href = "https://github.com/apcsio/apcs" target = "_blank">APCS library</a>]</p>
-    <p>  > Python [algorithmic programming, graphics using the turtle library, GPIO with Raspberry Pi]</p>
-    <p>  > HTML, CSS [web design]</p>
-    <p>  > JavaScript [ReactJS games using <a href = "https://github.com/facebook/create-react-app" target = "_blank">create-react-app</a>]</p>
+    <p>  ⋆ Java [algorithmic programming, mini-games using the <a href = "https://github.com/apcsio/apcs" target = "_blank">APCS library</a>]</p>
+    <p>  ⋆ Python [algorithmic programming, graphics using the turtle library, GPIO with Raspberry Pi]</p>
+    <p>  ⋆ HTML, CSS [web design]</p>
+    <p>  ⋆ JavaScript [ReactJS games using <a href = "https://github.com/facebook/create-react-app" target = "_blank">create-react-app</a>]</p>
 
     <h3>My Projects [all available on GitHub] ━━━━━━━━━━━━</h3>
-    <p>  > Sorting Hat Quiz - a five-question quiz which uses the results to sort the user into a Hogwarts House! [Javascript - ReactJs, create-react-app]</p>
-    <p>  > My <a href = "http://rnidhi123.github.io/Final-Project---GWC/index3.html" target = "_blank">old website</a>! [HTML, CSS]</p>
-    <p>  > This website! [HTML, CSS]</p>
-    <p>  > Blackjack Project - a Blackjack game in which the user plays against the computer! [Python]</p>
-    <p>  > A collection of mini-games! [Java - APCS library]</p>
+    <p>  ⋆ Sorting Hat Quiz — a five-question quiz which uses the results to sort the user into a Hogwarts House! [Javascript - ReactJs, create-react-app]</p>
+    <p>  ⋆ My <a href = "http://rnidhi123.github.io/Final-Project---GWC/index3.html" target = "_blank">old website</a>! [HTML, CSS]</p>
+    <p>  ⋆ This website! [HTML, CSS]</p>
+    <p>  ⋆ Blackjack Project — a Blackjack game in which the user plays against the computer! [Python]</p>
+    <p>  ⋆ A collection of mini-games! [Java - APCS library]</p>
    
     <h3>USACO [USA Computing Olympiad] ━━━━━━━━━━━━</h3>
-    <p>  > I am currently a Silver level contestant</p>
-    <p>  > My programs are written in Java</p>
+    <p>  ⋆ I am currently a Silver level contestant</p>
+    <p>  ⋆ My programs are written in Java</p>
    
     <h3>My Journey ━━━━━━━━━━━━</h3>
-    <p> I first started programming when I joined my school's Girls Who Code club in sixth grade. I wrote my first "Hello, World" program in HTML in this club, and ended up creating my first website. 
-     The more I learned about programming, the more interested I became. I started learning JavaScript on free online websites, and started learning Java and Python as well. 
-     The Raspberry Pi sparked my interest; the idea of a credit card-sized computer fascinated me. Using the GPIO on the Pi taught me about circuitry and hardware and how enjoyable working with hardware can be (as I once thought hardware was boring and difficult to learn). 
-     I started algorithmic programming in 9th grade when I learned about the USACO contests. I enjoy the problem-solving aspect of programming, as it challenges me to come up with creative yet practical solutions.
-     Although I find algorithmic programming very interesting, I never understood its applications and importance. This led me to start creating projects. I want to learn about how all the parts of a project come together to form one product. To understand this process, I want to create my own projects in this fashion.
-     My journey with programming is far from over and I am very excited to share the rest of my journey! </p>
+    <p> I first started programming when I joined my school's Girls Who Code club in sixth grade. I wrote my first "Hello, World" program in HTML in this club, and ended up creating my first website. </p>
+    <p> The more I learned about programming, the more interested I became. I started learning JavaScript on free online websites, and started learning Java and Python as well. </p>
+    <p> The Raspberry Pi sparked my interest; the idea of a credit card-sized computer fascinated me. Using the GPIO on the Pi taught me about circuitry and hardware and how enjoyable working with hardware can be (as I once thought hardware was boring and difficult to learn). </p>
+    <p> I started algorithmic programming in 9th grade when I learned about the USACO contests. I enjoy the problem-solving aspect of programming, as it challenges me to come up with creative yet practical solutions. </p>
+    <p> Although I find algorithmic programming very interesting, I never understood its applications and importance. This led me to start creating projects. I want to learn about how all the parts of a project come together to form one product. To understand this process, I want to create my own projects in this fashion. </p>
+    <p> My journey with programming is far from over and I am very excited to share everything I will learn! </p>
    
-    <h4>━━━━━━ The end! Check out the other tabs for more info!</h4>
+    <h4>━━━━━━━━━━━━ The end! Check out the other tabs for more info!</h4>
   </div>
   
   <input type="radio" name="tabs" id="tabthree">
@@ -132,20 +132,20 @@ style=" fill:#000000;"><g xmlns="http://www.w3.org/2000/svg" font-family="none" 
    <p> I have had a long journey with baking, going from boxed cake mix to creating my own tres leches cake. It started as an excuse to be able to eat more desserts, but it is now a fun hobby I can do by myself, with friends, or with family.
     My favorite desserts that I have baked are a tres leches cake and a spiced apple cake! </p>
    
-   <h4>━━━━━━ The end! Check out the other tabs for more info!</h4>
+   <h4>━━━━━━━━━━━━ The end! Check out the other tabs for more info!</h4>
   </div>
   
   <input type="radio" name="tabs" id="tabfour">
   <label for="tabfour">About</label>
   <div class="tab">
     <h3>General Information About Me ━━━━━━━━━━━━</h3>
-    <p> > Who I am: Nidhi Raviprasad</p>
-    <p> > My <a href = "mailto:nidhi.raviprasad@gmail.com" target = "_blank">Email Address</a>!</p>
-    <p> > My <a href = "https://github.com/nidhiraviprasad" target = "_blank">GitHub Profile</a>!</p>
-    <p> > <a href = "https://sites.google.com/view/projectreact/home" target = "_blank">Updates on my project</a>!</p>
+    <p> ⋆ Who I am: Nidhi Raviprasad</p>
+    <p> ⋆ My <a href = "mailto:nidhi.raviprasad@gmail.com" target = "_blank">Email Address</a>!</p>
+    <p> ⋆ My <a href = "https://github.com/nidhiraviprasad" target = "_blank">GitHub Profile</a>!</p>
+    <p> ⋆ <a href = "https://sites.google.com/view/projectreact/home" target = "_blank">Updates on my project</a>!</p>
     <p> <strong> Fun Fact: I have a poster of the entire JavaScript language in my room, and it is taller than me!</strong></p>
    
-   <h4>━━━━ The end! Check out the other tabs for more info!</h4>
+   <h4>━━━━━━━━━━━━ The end! Check out the other tabs for more info!</h4>
   </div>
    
  </div>
