added header to tab 1

--- a/index.html
+++ b/index.html
@@ -45,6 +45,8 @@ style=" fill:#000000;"><g xmlns="http://www.w3.org/2000/svg" font-family="none" 
   <label for="tabone">Home</label>
   <div class="tab">
    
+   <h2>Weekly Updates!</h2>
+   
    <h3>Wednesday, December 25, 2019 ━━━━━━━━━━━━</h3>
     <p>I was out of town this Sunday so I couldn't update as per schedule. I have started an AI project in Python this week! It uses tensorflow/tflearn and nltk to chat with the user. I want it to talk users through their stress/anxiety/other minor mental health issues and give them suggestions which may temporarily help their health (it is not meant to diagnose or treat any issues, just temporarily alleviate them). Hopefully I can get it working though, since I am experiencing issues with Python on my computer. </p>
    
