--- a/index.html
+++ b/index.html
@@ -47,8 +47,11 @@ style=" fill:#000000;"><g xmlns="http://www.w3.org/2000/svg" font-family="none" 
    
    <h2>Weekly Updates!</h2>
    
+   <h3>Saturday, December 29, 2019 ━━━━━━━━━━━━</h3>
+    <p>I attended the <a href = "https://www.sclibrary.org/Home/Components/Calendar/Event/69950/7952" target = "_blank">SC Half-A-Hack-A-Thon</a> yesterday! I was not able to start my AI project earlier so I used the same idea as it worked with the theme given. My team won best overall! There are still many improvements to be made (turning it into an app with a nice GUI, improving the accuracy) and I will work on that over time. More details and the project can be found on my GitHub (<a href = "https://github.com/nidhiraviprasad/chatterbot" target = "_blank">here</a>).  </p>
+   
    <h3>Wednesday, December 25, 2019 ━━━━━━━━━━━━</h3>
-    <p>I was out of town this Sunday so I couldn't update as per schedule. I have started an AI project in Python this week! It uses tensorflow/tflearn and nltk to chat with the user. I want it to talk users through their stress/anxiety/other minor mental health issues and give them suggestions which may temporarily help their health (it is not meant to diagnose or treat any issues, just temporarily alleviate them). Hopefully I can get it working though, since I am experiencing issues with Python on my computer. </p>
+    <p>I was out of town this Sunday so I couldn't update as per schedule. I would like to start an AI project in Python this week! It uses tensorflow/tflearn and nltk to chat with the user. I want it to talk users through their stress/anxiety/other minor mental health issues and give them suggestions which may temporarily help their health (it is not meant to diagnose or treat any issues, just temporarily alleviate them). Hopefully I can get it working though, since I am experiencing issues with Python on my computer. </p>
    
    <h3>Sunday, December 15, 2019 ━━━━━━━━━━━━</h3>
     <p>I took USACO this weekend! I did not do as well as I would have liked, but I have figured out my mistakes and hopefully I will do better next time! </p>
