--- a/index.html
+++ b/index.html
@@ -89,11 +89,12 @@ style=" fill:#000000;"><g xmlns="http://www.w3.org/2000/svg" font-family="none" 
     <p>  ⋆ JavaScript [ReactJS games using <a href = "https://github.com/facebook/create-react-app" target = "_blank">create-react-app</a>]</p>
 
     <h3>My Projects [all available on GitHub] ━━━━━━━━━━━━</h3>
-    <p>  ⋆ Sorting Hat Quiz — a five-question quiz which uses the results to sort the user into a Hogwarts House! [Javascript - ReactJs, create-react-app]</p>
-    <p>  ⋆ My <a href = "http://rnidhi123.github.io/Final-Project---GWC/index3.html" target = "_blank">old website</a>! [HTML, CSS]</p>
-    <p>  ⋆ This website! [HTML, CSS]</p>
-    <p>  ⋆ Blackjack Project — a Blackjack game in which the user plays against the computer! [Python]</p>
-    <p>  ⋆ A collection of mini-games! [Java - APCS library]</p>
+    <p>  ⋆ Chatterbot - an AI program which talks users through their mental health issues and gives them advice to help them! (Python - tensorflow/tflearn, nltk)</p>
+    <p>  ⋆ Sorting Hat Quiz — a five-question quiz which uses the results to sort the user into a Hogwarts House! (Javascript - ReactJs, create-react-app)</p>
+    <p>  ⋆ My <a href = "http://rnidhi123.github.io/Final-Project---GWC/index3.html" target = "_blank">old website</a>! (HTML, CSS)</p>
+    <p>  ⋆ This website! (HTML, CSS)</p>
+    <p>  ⋆ Blackjack Project — a Blackjack game in which the user plays against the computer! (Python)</p>
+    <p>  ⋆ A collection of mini-games! (Java - APCS library)</p>
    
     <h3>USACO [USA Computing Olympiad] ━━━━━━━━━━━━</h3>
     <p>  ⋆ I am currently a Silver level contestant</p>
